Implemented changes proposed by @JakeSwinn

--- a/docs/large-device-fleet/economics.mdx
+++ b/docs/large-device-fleet/economics.mdx
@@ -31,13 +31,13 @@ anywhere from 2-10% extra packets on top of your existing data packets.
 
 The following expenses are only needed if you are planning to have a large
 number of devices, have specific needs to control your network and/or you have
-specific security requirements.
+specific security requirements:
 
 - **Router** - This is your own LoRaWAN Network Server (LNS) on the Helium
   network. Your devices’ packets will be delivered directly to your Router/LNS
   from the hotspots that picked up your device’s transmissions.
 - **OUI** - This is required in order to route your devices’ packets to your own
-  Router/LNS. This is purchased directly from Helium. $100
+  Router/LNS. This is purchased directly from Helium for $100.
 - **DevAddr slab** - You need to get your own DevAddr range of addresses when
   you purchase an OUI. DevAddr is used by the Helium network to figure out who
   owns the device and where the packet should be delivered. The cost is $100 per
@@ -47,7 +47,7 @@ specific security requirements.
   network, you have to pay for the cost of that transaction. To minimise these
   costs, you can add devices in large batches as it is the cost of the
   transaction that you are paying for, not the number of devices processed.
-  $0.40 per transaction
+  The cost is $0.40 per transaction.
 - **Billing reconciliation with hotspots** - Sending money between the accounts
   on the blockchain has a cost. Because of that, we cannot pay hotspots
   instantly for each packet they deliver. To lower the cost of paying hotspots
