--- a/docs/large-device-fleet/operating-router-lns.mdx
+++ b/docs/large-device-fleet/operating-router-lns.mdx
@@ -10,11 +10,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 There are two different ways to have your own Router/LoRaWAN Network Server
 (LNS):
 
-- Run the server yourself, or
-- Get someone else to run and maintain the server for you This is a full LoRaWAN
-  Network server but you don’t need to know much about LoRaWAN to run one. Being
-  knowledgeable about LoRaWAN will make it easier to operate and troubleshoot
-  the operation of the server and devices.
+- Run the server yourself - detailed instructions will be available online, or
+- Find someone in the ecosystem whose business is to host Routers for others. 
+They will save you a lot of time by standing up and operating an instance of 
+a Router just for you.
 
 Router software to run on your own server:
 
