--- a/docs/large-device-fleet/differences-trial-production.mdx
+++ b/docs/large-device-fleet/differences-trial-production.mdx
@@ -7,7 +7,7 @@ sidebar_label: Trial vs production differences
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Before deploying a large flee of devices, it is recommended to run a small trial
+Before deploying a large fleet of devices, it is recommended to run a small trial
 to get comfortable with the Helium network and to understand performance of your
 devices. The length of the trial will depend on the questions you are trying to
 answer for yourself (does this device work, can I make decisions with data from
@@ -18,7 +18,7 @@ Production is not just a larger trial. There are additional aspects that will
 become important to take care of in production that you were not necessarily
 considering during the trial.
 
-- **Robustness** - for devices, hotspots, and the router. What happens if one of
+- **Robustness** - for devices, hotspots, and the Router. What happens if one of
   these goes down? How quickly can you detect the problem? How quickly can you
   resolve it?
 - **Managing devices in the field** - when you have a small number of devices to
