--- a/docs/large-device-fleet/introduction.mdx
+++ b/docs/large-device-fleet/introduction.mdx
@@ -11,7 +11,7 @@ This section is for organizations that plan to run large numbers of devices on
 the Helium network. It is easy to onboard millions of devices onto the Helium
 network without having to learn the details of how Helium and LoRaWAN work.
 
-Some organisations have additional needs and requirement when it comes to
+Some organisations have additional needs and requirements when it comes to
 network and data. The following content describes the various components of the
 Helium network and the economics of operating a fleet of devices. It is up to
 the organization to choose whether to leverage Helium's Router infrastructure,
