--- a/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/arduino.mdx
+++ b/docs/use-the-network/devices/development/heltec/wifi-lora-32-v2/arduino.mdx
@@ -204,6 +204,10 @@ matching field from Console, example shown below.
 />
 )
 
+Finally, we will paste in the License Key we obtained above to the sketch.  Replace the values in license[4] with the key obtained from [resource.heltec.cn/search](http://resource.heltec.cn/search)
+
+![image](https://user-images.githubusercontent.com/15837044/159526939-543bfb34-9651-426d-8089-85ce07ee477e.png)
+
 ### Selecting Port
 
 Next, we need to select the correct Serial port in the Arduino IDE. Navigate to
