default branch for console is now master

--- a/docs/use-the-network/run-a-network-server/run-console.mdx
+++ b/docs/use-the-network/run-a-network-server/run-console.mdx
@@ -146,7 +146,7 @@ cp templates/docker-compose-local.yaml docker-compose.yaml
 This template builds console locally and does not use nginx for SSL. You may
 want to read about nginx setup [here](/use-the-network/run-a-network-server/deploy-console).
 
-If you launch docker-compose from here, you will build from the `dev` branch.
+If you launch docker-compose from here, you will build from the `master` branch.
 You can use git to build and checkout alternate branches or tags.
 
 Alternately, to avoid building at all, you can use a quay image by changing the
