added console migration
added console migration info and updated multiple packet content

--- a/docs/use-the-network/console/multi-packets.mdx
+++ b/docs/use-the-network/console/multi-packets.mdx
@@ -8,11 +8,9 @@ slug: /use-the-network/console/multi-packets
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-By default, Data Credits are only charged for uplinks. The Multiple Packets feature provides the ability to pay for additional packets for redundancy and location triangulation purposes. 
+Data Credits are only spent for uplinks including initial join packets. The Multiple Packets feature provides the ability to pay for additional packets for redundancy and location triangulation purposes. 
 
 To learn more about enabling Multiple Packets, check out our Tips and Tricks video [here](https://youtu.be/rDJcGspnq1A).
-
-**Note:** Regardless of the Multiple Packet feature setting, under certain conditions the system purchases multiple packets to help ensure successful packet transmission (these cost additional Data Credits and happen automatically). These include: initial joining of the device (up to five packets) and downlinks that contain data payloads (up to three packets). These additional packets help ensure connection reliability to downlink via the Hotspot with the strongest connection.
 
 ## Configuring Multiple Packets
 
