--- a/docs/use-the-network/console/users.mdx
+++ b/docs/use-the-network/console/users.mdx
@@ -98,6 +98,10 @@ Importing an Organization can be performed upon first login for the new Console 
 Prior to import, set the Organization on the previous Console instance to inactive and make sure no duplicate devices exist on the new Console instance. This will allow devices to join on the new Console instance.
 :::
 
+:::info
+AWS IoT Core users- before importing users should delete existing migrated device certificates on AWS IoT Core.
+:::
+
 To import an Organization, navigate to the Organizations section and click + Add Organization.
 
 - Drag and drop the file or navigate to the JSON file saved location. 
