--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -53,7 +53,7 @@ Helium hosts snapshots for download for the convenience of syncing validators. Y
 * Choose the block height you want to start from and download the snapshot from Helium:  
   * `curl -O https://snapshots.helium.wtf/mainnet/snap-<height>`
 * Move that file into your `validator_data` directory.
-* Load snapshot from the file you curl'd: ```miner snapshot load /var/data/snap-<height>```. 
+* Load snapshot from the file you curl'd: ```miner snapshot load /var/data/snap-<height>```. This command expects an absolute path to the snapshot file.
   * This command may return error: ```RPC to 'val_miner@127.0.0.1' failed: timeout``` but the snapshot load actually continues to run in the background.
   * You can confirm that the snapshot load has completed by running ```miner info height``` every few minutes until it successfully shows a block height >= the snapshot height you loaded. You can then move on to the next step.
 * Confirm sync state is `active` via `miner repair sync_state`.
@@ -71,7 +71,7 @@ Helium hosts snapshots for download for the convenience of syncing validators. Y
 * On the source Validator take a snapshot via `miner snapshot take /var/data/snap-<height>` using the height you determined from the first step.
 * On the source Validator resume transaction syncing via ```miner repair sync_resume```.
 * Move the `/var/data/snap-<height>` file into the `validator_data` directory on the destination Validator.
-* Load snapshot from the file you copied to the destination validator: ```miner snapshot load /var/data/snap-<height>```. 
+* Load snapshot from the file you copied to the destination validator: ```miner snapshot load /var/data/snap-<height>```. This command expects an absolute path to the snapshot file.
   * This command may return error: ```RPC to 'val_miner@127.0.0.1' failed: timeout``` but the snapshot load actually continues to run in the background.
   * You can confirm that the snapshot load has completed by running ```miner info height``` every few minutes until it successfully shows a block height >= the snapshot height you loaded. You can then move on to the next step.
 * Confirm sync state is `active` via `miner repair sync_state`.
