add info about wallet app deeplinks for makers

--- a/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
+++ b/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
@@ -7,6 +7,12 @@ slug: /wallets/app-wallet/deep-links-and-qr-codes
 
 # Deep Links and External QR Codes (e.g. System Camera)
 
+:::info
+This page refers to QR codes and deep links that are signed and submited to the blockchain via the Helium App.
+Makers should not use the following information and instead use the [Helium React Native SDK](https://helium.github.io/react-native-helium/modules/WalletLink.html)
+to sign and submit transactions in thier maker app.
+:::
+
 To generate a QR code to scan, find a service to generate a QR code using the url's below.
 This is an example site: `https://www.qr-code-generator.com`
 
