Console Updates for Device/Org Cap
Added information about the cap + description of Console moving forward

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -21,6 +21,11 @@ Device Management includes:
 
 Console is available as a free to use hosted application at [console.helium.com](https://console.helium.com).
 
+:::info
+Helium Console provides a way for users to easily onboard and test or demo devices on the Helium Network.
+For large deployments and commercial use, users should consider other members in the ecosystem who are hosting Console/Router instances.
+:::
+
 Learn more about how to get started using Console with our Tips and Tricks videos [here](https://www.youtube.com/playlist?list=PLtKQNefsR5zNjWkXqdRXeBbSmYWRJFCuo).
 
 ### Getting Started
