--- a/docs/use-the-network/console/users.mdx
+++ b/docs/use-the-network/console/users.mdx
@@ -54,6 +54,17 @@ navigation, and then click **+ Add Organization** in the upper right. To switch
 to another Organization click the **Switch** button on the list of Organizations
 on the **Dashboard** page.
 
+:::important 
+Helium Console users are capped at ONE (1) Organization and 10 devices for their account. 
+
+If your account as of March 31, 2022 exceeds this cap, you can continue using Helium Console with those existing devices and Orgs for 12 calendar months, but will not be able to add additional devices and Orgs.
+
+To continue with more than 1 Org / 10 devices after 12 months, you will need to work with a member of the ecosystem, host your own instance, or contact a team members at sales@nova.xyz.
+
+*While an account is in an overage state with > 1 Org / 10 devices and a device or Org is deleted, additional devices or Orgs cannot be re-added.
+
+:::
+
 
 <img src={useBaseUrl("img/use-the-network/console/organizations.png")} />
 
