--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -35,3 +35,8 @@ Before pursuing this configuration though, it is worth considering.
 - An OUI costs $900 in Data Credits at a minimum ($100 for the OUI and $800 for
   the smallest address slab), so if that cost is prohibitive, use Helium's
   Console.
+
+  :::info
+  For a video tutorial on setting up your own instance of Console, 
+  check out our Tips and Tricks video [here](https://www.youtube.com/watch?v=rVb5gfE_vs8)
+  :::
