--- a/docs/use-the-network/devices/devices.mdx
+++ b/docs/use-the-network/devices/devices.mdx
@@ -6,8 +6,7 @@ slug: /use-the-network/devices
 
 # Helium Devices
 
-The Helium network supports any LoRaWAN capable device meeting the
-[v1.0.2 specification](https://lora-alliance.org/resource_hub/lorawan-specification-v1-0-2).
+The Helium network supports any LoRaWAN capable device meeting the v1.0.2, v1.0.3, or v1.0.4 specification.
 
 :::info
 
