Console Updates for Device/Org Cap (#828)
* Console Updates for Device/Org Cap

Added information about the cap + description of Console moving forward

* Add video link

Added video link for open-source Console tutorial

* small tweak

looks good, small tweak, plus an unrelated update.

Co-authored-by: Dal <dal@helium.com>

--- a/docs/use-the-network/console/adding-devices.mdx
+++ b/docs/use-the-network/console/adding-devices.mdx
@@ -29,6 +29,20 @@ For a video tutorial on adding and importing devices, check out our Tips and Tri
 
 To add a device, go to **Devices** and click the **+ Add Device** icon. The Add New Device screen appears.
 
+:::important 
+Helium Console users are capped at ONE (1) Organization and 10 devices for their account. 
+
+If your account as of March 31, 2022 exceeds this cap, you can continue using Helium Console with those existing devices and Orgs for 12 calendar months, but will not be able to add additional devices and Orgs.
+
+To continue with more than 1 Org / 10 devices after 12 months, you will need to work with a member of the ecosystem, host your own instance, or contact a team member at sales@nova.xyz.
+
+*While an account is in an overage state with > 1 Org / 10 devices and a device or Org is deleted, additional devices or Orgs cannot be re-added.
+
+Users over the cap who would like to immediately add more devices/Organizations, or users who have not yet exceeded the cap but plan to do so, 
+can reach out to members of the ecosystem, host their own instance, or contact sales@nova.xyz. 
+
+:::
+
 <img
   src={useBaseUrl("img/use-the-network/console/console-add-device.png")}
 />
