--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -60,3 +60,48 @@ Remember the Azure IoT Hub policy must have the following permissions enabled: R
 
 ## Adding a device
 Every time the Azure IoT Hub integration starts up on Console, it will check if the device exists on IoT Hub, and if it doesn’t it will create one. 
+
+# Azure IoT Central (Staging Only)
+
+According to Microsoft, "Azure IoT Central is highly secure, scales with your business as it grows, ensures your investments are repeatable, and integrates with your existing business apps." Read more about Azure IoT Central [here](https://azure.microsoft.com/en-us/services/iot-central/).
+ 
+## On Azure IoT Central 
+Prior to setting up an integration in Console, the following Azure IoT Central information is required:
+
+- API token (role app administrator, note this is only shown one time so copy and keep in a safe, retrievable location)
+- ID scope (from Device connection groups)
+- App Name (obtained from your Azure IoT Central url `<appname>.azureiotcentral.com`)
+
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/integrations/integrations-azure-iot-central-id-scope.png"
+  )}
+/>
+
+## On Console
+To add the integration in Console, go to Integrations on the left-hand menu.
+
+Click the **Add** integration button.
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/integrations/integrations-add-helium-console.png"
+  )}
+/>
+
+Choose the **Azure IoT Central** integration icon.
+<img
+  src={useBaseUrl(
+    "img/use-the-network/console/integrations/integrations-azure-iot-central-icon.png"
+  )}
+/>
+
+
+Enter the Azure IoT Central information into the Console:
+- API token
+- Scope ID
+- App Name
+
+After providing a name and completing the integration, make sure the device/label is mapped to the Azure IoT Central Integration on the Flows page. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+
+## Adding a device
+Every time the Azure IoT Central integration starts up on Console, it will check if the device exists on IoT Central, and if it doesn’t it will create one. 
