--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -5,18 +5,18 @@ sidebar_label: Light Hotspots
 slug: /mine-hnt/light-hotspots
 ---
 
-# Light Hotspots - Beta
+# Light Hotspots Software Upgrade
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 This document describes the architecture and technical roadmap planned for
-converting existing Approved Hotspots to Light Hotspots. As part of this
+converting existing Approved Hotspots to Light Hotspots as a software upgrade. As part of this
 migration, we have introduced a new Hotspot variant onto the network, called
-a [Data Only Hotspot](/mine-hnt/data-only-hotspots). 
+a [Data Only Hotspot](/mine-hnt/data-only-hotspots).
 
 A conversion of a Full Hotspot running Light Hotspot software is now being tested on [Testnet](https://testnet-explorer.helium.com).
 
-This project is in progress and subject to change. **Last updated Monday March 7, 2022**.
+This project is in progress and subject to change. **Last updated Monday April 4, 2022**.
 
 :::info
 
@@ -41,10 +41,10 @@ As all approved Hotspots transition to a Light Hotspot architecture, we also
 introduce a new type of Hotspot known as Data Only Hotspots, to satisfy the
 increasing demand and continue to expand network coverage.
 
-| Rewards Type                 | Data Only Hotspots | Full & Light Hotspots |
-| :--------------------------- | :----------------- |:------------- |
-| Network Data Forwarding      | YES                | YES           |
-| Proof of Coverage            | NO                 | YES           |
+| Rewards Type            | Data Only Hotspots | Full & Light Hotspots |
+| :---------------------- | :----------------- | :-------------------- |
+| Network Data Forwarding | YES                | YES                   |
+| Proof of Coverage       | NO                 | YES                   |
 
 ## Light Hotspot Properties
 
@@ -97,22 +97,25 @@ Development of this code takes place in the above GitHub repo, as well at the
 - **January 2022**: Hardware Audit starts for Light Hotspot manufacturers
 - **February 2022**: Introduce hardware-based Hotspots on Testnet (Full Hotspots running Light Hotspot firmware). Validators create challenges using H3dex targeting.
 - **February 22 2022**: [HIP 54](https://heliumvote.com/14me3X7jpEmn3eeFfnAkMvUoFU3cN6GAS3CDomqCikr7VQfHWrU) and [HIP 55](https://heliumvote.com/14Rjhhz1DXLVmSRdzappqWgD6rfgu6XYxmdaSCvWLyLH8ZWbciK) passes
-- **February 2022 - Ongoing**: HIP-19 Approved Makers participating in Testnet
-- **Tentative: Q2 2022**: Code related to Light Hotspot merged to production, in an inactive state
-- **Several weeks later**: Activate set of chain variables to enable Light Hotspots on Mainnet
+- **February 2022**: HIP-19 Approved Makers participating in Testnet
+- **April 6 2022**: Code related to Light Hotspot merged to production, in an inactive state. Light Hotspot software update tagged for Makers to upgrade their fleet. Validators will also receive a mandatory software update.
+- **April 19 2022**: Activate set of chain variables to enable Light Hotspots on Mainnet
 - **Several weeks later**: Deactivate Miner on Light Hotspots on Mainnet such that they run gateway-rs only
 
 ## Current progress on Testnet
-Hardware-based Hotspots (Helium Hotspots and HIP19 Makers) are now participating in a new Proof-of-Coverage with Validators on Testnet. In this test, all Hotspots use Testnet Validators for blockchain information and do not need to sync the blockchain directly. They also receive PoC Challenges from the Validator pool.
+
+Hotspots on Testnet running Light Hotspot software are now participating in a new Proof-of-Coverage with Validators. In this test, all Hotspots use Testnet Validators for blockchain information and do not need to sync the blockchain directly. They also receive PoC Challenges from the Validator pool.
 
 You can see their progress on [Testnet](https://testnet-explorer.helium.com).
 
 These Hotspots are also running a dockerized version of [gateway-rs (rust-based gateway firmware)](https://github.com/helium/gateway-rs) and an updated packet forwarder that relies on Validators.
 
-*Note that these Hotspots are earning testnet tokens (TNT) and not HNT.*
+_Note that these Hotspots are earning testnet tokens (TNT) and not HNT._
 
 ## Current progress on Mainnet
-A portion of the complete Light Hotspot software is also on mainnet, transferring non-PoC packets on a test Hotspot using the new packet forwarder that relies on Validators. 
+
+A portion of the complete Light Hotspot software is also on mainnet, transferring non-PoC packets on a test Hotspot using the new packet forwarder that relies on Validators.
 
 ### What's Next
+
 Merge code related to Light Hotspots to production, in an inactive state.
