--- a/docs/wallets/app-wallet/transaction-failures.mdx
+++ b/docs/wallets/app-wallet/transaction-failures.mdx
@@ -93,7 +93,7 @@ To check the API, first copy your Hotspot address. You can find this on explorer
 
 Then paste the address where it says `:hotspotaddress`
 
-`api.helium.com/v1/hotspots/:hotspotaddress`
+`api.helium.io/v1/hotspots/:hotspotaddress`
 
 **Example:**
 
