removed staging only
removed staging only from heading

--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -61,7 +61,7 @@ Remember the Azure IoT Hub policy must have the following permissions enabled: R
 ## Adding a device
 Every time the Azure IoT Hub integration starts up on Console, it will check if the device exists on IoT Hub, and if it doesn’t it will create one. 
 
-# Azure IoT Central (Staging Only)
+# Azure IoT Central
 
 According to Microsoft, "Azure IoT Central is highly secure, scales with your business as it grows, ensures your investments are repeatable, and integrates with your existing business apps." Read more about Azure IoT Central [here](https://azure.microsoft.com/en-us/services/iot-central/).
  
