Match terminology used in iot-central and application

--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -68,7 +68,7 @@ According to Microsoft, "Azure IoT Central is highly secure, scales with your bu
 ## On Azure IoT Central 
 Prior to setting up an integration in Console, the following Azure IoT Central information is required:
 
-- API token (role app administrator, note this is only shown one time so copy and keep in a safe, retrievable location)
+- API Key (role app administrator, note this is only shown one time so copy and keep in a safe, retrievable location)
 - ID scope (from Device connection groups)
 - App Name (obtained from your Azure IoT Central url `<appname>.azureiotcentral.com`)
 
@@ -97,7 +97,7 @@ Choose the **Azure IoT Central** integration icon.
 
 
 Enter the Azure IoT Central information into the Console:
-- API token
+- API Key
 - Scope ID
 - App Name
 
