Document heretofore undocumented `max_block` for oracle prices.

--- a/docs/api/blockchain/oracle-prices.mdx
+++ b/docs/api/blockchain/oracle-prices.mdx
@@ -67,6 +67,7 @@ _Path Parameters_
 
 | param             | Type     | Note                                                                  |
 | ----------------- | -------- | --------------------------------------------------------------------- |
+| max_block (optional) | _integer_ | Last block number to include in the results |
 | cursor (optional) | _string_ | Returned from an initial query, allowing client to fetch more results |
 
 </TabItem>
