--- a/docs/api/blockchain/blocks.mdx
+++ b/docs/api/blockchain/blocks.mdx
@@ -15,7 +15,7 @@ import TabItem from "@theme/TabItem";
 
 Gets the current height of the blockchainn.
 
-If `max_time` is speified this returns highest block height that was valid (but
+If `max_time` is specified this returns highest block height that was valid (but
 not equal to) the given time.`max_time` can be given as an ISO8601 timestamp or
 relative time can be used.
 
