--- a/docs/use-the-network/console/integrations/azure.mdx
+++ b/docs/use-the-network/console/integrations/azure.mdx
@@ -101,7 +101,14 @@ Enter the Azure IoT Central information into the Console:
 - Scope ID
 - App Name
 
-After providing a name and completing the integration, make sure the device/label is mapped to the Azure IoT Central Integration on the Flows page. More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+After providing a name and completing the integration, make sure the device/label is mapped to the Azure IoT Central Integration on the Flows page. 
+
+More information about Flows [here](https://docs.helium.com/use-the-network/console/flows/).
+
+:::important 
+Decoding of sensor data must occur prior to sending data to Azure IoT Central. More information on Decoder Functions [here](https://docs.helium.com/use-the-network/console/functions#creating-a-decoder-function).
+:::
+
 
 ## Adding a device
 Every time the Azure IoT Central integration starts up on Console, it will check if the device exists on IoT Central, and if it doesn’t it will create one. 
