--- a/docs/mine-hnt/light-hotspots.mdx
+++ b/docs/mine-hnt/light-hotspots.mdx
@@ -16,7 +16,7 @@ a [Data Only Hotspot](/mine-hnt/data-only-hotspots).
 
 A conversion of a Full Hotspot running Light Hotspot software is now being tested on [Testnet](https://testnet-explorer.helium.com).
 
-This project is in progress and subject to change. **Last updated Monday April 6, 2022**.
+This project is in progress and subject to change. **Last updated Monday April 12, 2022**.
 
 :::info
 
@@ -98,8 +98,8 @@ Development of this code takes place in the above GitHub repo, as well at the
 - **February 2022**: Introduce hardware-based Hotspots on Testnet (Full Hotspots running Light Hotspot firmware). Validators create challenges using H3dex targeting.
 - **February 22 2022**: [HIP 54](https://heliumvote.com/14me3X7jpEmn3eeFfnAkMvUoFU3cN6GAS3CDomqCikr7VQfHWrU) and [HIP 55](https://heliumvote.com/14Rjhhz1DXLVmSRdzappqWgD6rfgu6XYxmdaSCvWLyLH8ZWbciK) passes
 - **February 2022**: HIP-19 Approved Makers participating in Testnet
-- **~~April 6 2022~~** **Week of April 11**: Code related to Light Hotspot merged to production, in an inactive state. Light Hotspot software update tagged for Makers to upgrade their fleet. Validators will also receive a mandatory software update.
-- **~~April 19 2022~~** **Week of April 25**: Activate set of chain variables to enable Light Hotspots on Mainnet
+- **~~April 6 2022~~** **April 13**: Code related to Light Hotspot merged to production, in an inactive state. Light Hotspot software update tagged for Makers to upgrade their fleet. Validators will also receive a mandatory software update.
+- **~~April 19 2022~~** **May 3**: Activate set of chain variables to enable Light Hotspots on Mainnet
 - **Several weeks later**: Deactivate Miner on Light Hotspots on Mainnet such that they run gateway-rs only
 
 ## Current progress on Testnet
@@ -118,4 +118,4 @@ A portion of the complete Light Hotspot software is also on mainnet, transferrin
 
 ### What's Next
 
-Merge code related to Light Hotspots to production, in an inactive state.
+Merge code related to Light Hotspots to mainnet, in an inactive state.
