add wallet app qr memo note

--- a/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
+++ b/docs/wallets/app-wallet/deep-links-and-qr-codes.mdx
@@ -8,9 +8,9 @@ slug: /wallets/app-wallet/deep-links-and-qr-codes
 # Deep Links and External QR Codes (e.g. System Camera)
 
 :::info
-This page refers to QR codes and deep links that are signed and submited to the blockchain via the Helium App.
+This page refers to QR codes and deep links that are signed and submitted to the blockchain via the Helium App.
 Makers should not use the following information and instead use the [Helium React Native SDK](https://helium.github.io/react-native-helium/modules/WalletLink.html)
-to sign and submit transactions in thier maker app.
+to sign and submit transactions in their maker app.
 :::
 
 To generate a QR code to scan, find a service to generate a QR code using the url's below.
@@ -37,6 +37,8 @@ This is an example site: `https://www.qr-code-generator.com`
 
 ### Burn HNT
 
+**Memos are base64 encoded strings with a max size of 8 bytes.**
+
 Generated from console
 
 ```json
@@ -49,6 +51,8 @@ Generated from console
 ```
 
 ### Payment
+
+**Memos are base64 encoded strings with a max size of 8 bytes.**
 
 Single Payee without memo
 
