--- a/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
+++ b/docs/use-the-network/run-a-network-server/run-a-network-server.mdx
@@ -21,6 +21,11 @@ running.
 - Optionally [debug with sniffer](/use-the-network/run-a-network-server/debug-with-sniffer)
   to confirm router runtime behavior using a virtual LoRaWAN device and a
   software-based protocol sniffer
+- [Router benchmarking](/use-the-network/run-a-network-server/router-benchmarking)
+  for load & capacity of real LoRaWAN traffic in an isolated environment
+    + Use this to help determine size of server instance to deploy
+    + This document also gives insight to interactions of console, router,
+      gateways, organizations, devices and wallets as used in production
 
 Before pursuing this configuration though, it is worth considering.
 
