--- a/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
+++ b/docs/use-the-network/run-a-network-server/router-benchmarking.mdx
@@ -10,8 +10,10 @@ This measures load by steadily increasing load on a
 [Helium Router](https://github.com/helium/router)
 to find its threshold of capacity for a given server instance.
 
-The procedure used is *load & capacity measurement* but some people refer to
-it as *stress testing*.
+Measuring load a particular server instance may then be compared with
+equivalent measurements on another server instance with different hardware
+specs.  The procedure used is *load & capacity measurement* but some people
+also refer to this as *stress testing*.
 
 This document also gives insight to interactions of routers, gateways,
 organizations, devices and wallets in production.
@@ -43,10 +45,10 @@ Additional utilities, possibly already installed on your system:
 
 - [jq](https://github.com/stedolan/jq)
 
-Our working directory is `~/helium/load+capacity/`.
+Our working directory is `~/helium/benchmark/`.
 
 ```bash
-WORKDIR=~/helium/load+capacity
+WORKDIR=~/helium/benchmark
 ```
 
 Convenience aliases:
@@ -102,8 +104,8 @@ Additional variables will be created along the way.
 
 ## Logs & Graphs
 
-Load Tests are meaningless without the ability to measure, and in order to
-improve requires meaningful measurements.
+Benchmarking load is meaningless without the ability to measure, and in
+order to optimize server capacity requires meaningful measurements.
 
 Graphs described below help on both points.
 
@@ -277,7 +279,7 @@ WALLET=$(helium-wallet -f /var/data/wallet.key info | \
 echo $WALLET
 ```
 
-That shared wallet should be ready for use below.
+That shared wallet is ready for use below.
 
 ## Router Address
 
@@ -293,7 +295,7 @@ router peer listen
 Visually extract the entry beginning with `/p2p/` and copy the sequence up
 to but excluding the subsequent slash (`/`).  (Unfortunately, due to
 `router` being an aliased Docker command, `grep` and `sed` cannot be of
-service here.  (Otherwise, manually do the equivalent of:  
+service here.  Otherwise, manually do the equivalent of:  
 `grep /p2p/ | sed 's%^./p2p/\([^/]*\)/.*$%\1%'`.)
 
 That long alphanumeric value gets used in multiple places below as the
@@ -338,13 +340,13 @@ Find a hexagon for each gateway instance such that each hex is an
 equal distance from the router to be used.
 
 > The importance of asserting a location for each hotspot:
-
+>
 > Without any location asserted for a particular gateway, the distance
 calculated to router defaults to 1000 as defined within `distance_between()`
 in
 [router_device_devaddr.erl](https://github.com/helium/router/blob/master/src/device/router_device_devaddr.erl)
 which may be preferable to triangulating based upon physical location.
-
+>
 > However, relying upon this default will bypass much program logic which
 involves a blockchain ledger lookup, thereby yielding *artificially* higher
 throughput.
@@ -460,16 +462,22 @@ Connections of devices will distribute across multiple gateways, simulating
 real world scenarios with geographically dispersed deployments.
 
 ```bash
+metrics_port=9898
 for o in $(seq --format="%02g" $FIRST_ORG $N_ORGS); do
   cd $WORKDIR/org-$o/
 
   for d in $(seq --format="%03g" $FIRST_DEV $N_DEVICES); do
-    mkdir device-$d
+    mkdir -p device-$d/settings
 
-    ln -s ~/helium/virtual-lorawan-device/settings/default.toml device-$d/
+    ln -s ~/helium/virtual-lorawan-device/settings/default.toml \
+      device-$d/settings/
 
-    out="device-$d/settings.toml"
-    echo "[device.$d.credentials]"            > $out
+    out="device-$d/settings/settings.toml"
+    echo 'default_server = "dev"'             > $out
+    echo 'metrics_port = '$metrics_port       >> $out
+    metrics_port=$((metrics_port + 1))
+    echo ''                                   >> $out
+    echo "[device.$d.credentials]"            >> $out
     i=$((d - 1))
     echo 'dev_eui = '$(jq .devices[$i].dev_eui < devices.json) >> $out
     echo 'app_eui = '$(jq .devices[$i].app_eui < devices.json) >> $out
@@ -508,6 +516,9 @@ for i in $(seq --format="%02g" $FIRST_GW $N_GATEWAYS); do
   echo 'keypair = "'${keyfile}'"'       > $out
   port=$((1680 + $i))
   echo 'listen = "127.0.0.1:'${port}'"' >> $out
+  port=$((4467 + $i))
+  echo 'api = $port'                    >> $out
+  echo 'region = "US915"'               >> $out
   echo ''                               >> $out
   echo '[update]'                       >> $out
   echo 'enabled = false'                >> $out
@@ -524,13 +535,18 @@ seeded from [mainnet](https://docs.helium.com/mine-hnt/validators/#mainnet).
 
 Generate transactions using `WALLET` variable defined earlier.
 
+When in server-mode for the first time, gateway-rs needs time to generate
+key material and connect to upstream services.
+
 These transactions will be signed and committed later:
 
 ```bash
 for i in $(seq --format="%02g" $FIRST_GW $N_GATEWAYS); do
-  helium_gateway -c gw-$i server &
+  helium_gateway -c gw-$i server > gw-$i/server.log &
   pid=$!
-  sleep 1
+  sleep 60
+
+  helium_gateway -c gw-$i info > gw-$i/gw-info.json
 
   helium_gateway -c gw-$i \
     add --mode dataonly \
@@ -541,10 +557,12 @@ for i in $(seq --format="%02g" $FIRST_GW $N_GATEWAYS); do
 done
 ```
 
-Extract each `txn` value from the previous output:
+Extract each `txn` value from the previous output and strip quotes from
+value:
 
 ```bash
-jq .txn gw-*/add-dataonly.json > txn-ids.log
+jq .txn gw-*/add-dataonly.json | \
+   sed 's/"//g' > txn-ids.log
 ```
 
 Prepare command to assert locations based upon previous transactions:  
@@ -552,6 +570,7 @@ Prepare command to assert locations based upon previous transactions:
 
 ```bash
 for txn in $(cat txn-ids.log); do
+   # Prompts for wallet password
    helium-wallet \
      -f $WORKDIR/wallet/wallet.key \
      hotspots add $txn
@@ -573,27 +592,40 @@ for txn in $(cat txn-ids.log); do
 done
 ```
 
-Assert location, which as of gateway-rs v1.0 requires running as server in
-the background momentarily:
+Assert location, which uses `$GW_KEY` populated during our previous run of
+`helium_gateway` in server-mode:
 
 ```bash
 for i in $(seq --format="%02g" $FIRST_GW $N_GATEWAYS); do
-  helium_gateway -c gw-$i server &
-  pid=$!
-  sleep 1
-  key=$(helium_gateway -c gw-$i info | jq .key)
-  kill $pid
+  key=$(jq .key $gw-01/gw-info.json)
 
   helium-wallet \
      -f $WORKDIR/wallet/wallet.key \
      hotspots assert --gateway $key \
      --mode dataonly \
-     --lat $LAT --lon $LON --elevation 6 \
+     --lat=$LAT --lon=$LON --elevation 6
+done
+```
+
+Repeat with `--commit` flag, which **burns HNT from your wallet:**
+
+```bash
+for i in $(seq --format="%02g" $FIRST_GW $N_GATEWAYS); do
+  # key=$(jq .key $gw-01/gw-info.json)
+  key=$(grep 'INFO starting server, key:' gw-$i/server.log | \
+        sed 's/^.*: \(.*\),.*$/\1/')
+
+  helium-wallet \
+     -f $WORKDIR/wallet/wallet.key \
+     hotspots assert --gateway $key \
+     --mode dataonly \
+     --lat=$LAT --lon=$LON --elevation 6 \
      --commit
 done
 ```
 
-Confirm asserted location via
+Allow time-- approximately 5-20 minutes-- for those transactions to be
+recorded onto the blockchain, and then confirm asserted locations via
 [blockchain API](https://docs.helium.com/api/blockchain/introduction/):
 
 ```bash
@@ -601,7 +633,8 @@ curl --user-agent "$UA" \
   "$API_URL/v1/hotspots/location/distance?lat=$LAT&lon=$LON&distance=1000"
 ```
 
-Ensure that your gateways appear within those results.
+Ensure that your gateways appear within those results.  If not found, wait
+and check again later.
 
 Other gateways appearing within the results is benign because a virtual
 LoRaWAN device will only reach those for which it was explicitly configured
@@ -629,20 +662,7 @@ change `[router.release]` to match.)
 
 With that, your gateways are finally ready for Load & Capacity runs.
 
-## Start Gateways
-
-Launch each gateway "server" as a separate process, and let the OS handle
-concurrency:
-
-```bash
-cd $WORKDIR
-
-for i in $(seq --format="%03g" $N_GATEWAYS); do
-  helium_gateway -c gw-$i server > gw-$i/gw.log 2>&1 &
-done
-```
-
-## Spawn Virtual Devices
+## Wait for XOR Filter
 
 The Console may indicate "Pending" from having added new devices above and
 may take upwards of 20 minutes.
@@ -673,18 +693,35 @@ jq '.[].in_xor_filter' org-*/status.json \
   | grep false && sleep 60
 ```
 
+## Start Gateways
+
+Launch each gateway "server" as a separate process, and let the OS handle
+concurrency:
+
+```bash
+cd $WORKDIR
+
+for i in $(seq --format="%02g" $N_GATEWAYS); do
+  helium_gateway -c gw-$i server >> gw-$i/run.log 2>&1 &
+done
+```
+
+## Spawn Virtual Devices
+
 TODO: add feature to `virtual-lorawan-device` to facilitate "slow start" for
 progressively increasing load.
 
 
-Launch each as a separate process, and again let the OS handle concurrency:
+Launch each virtual device as a separate process, and again let the OS
+handle concurrency:
 
 ```bash
 cd $WORKDIR
 
 for o in $(seq --format="%02g" $N_ORGS); do
   for i in $(seq --format="%03g" $N_DEVICES); do
-    ( cd org-$o/device-$i/ && virtual-lorawan-device > log 2>&1 ) &
+    ( cd org-$o/device-$i/ && \
+      virtual-lorawan-device >> run.log 2>&1 ) &
 
     # Facilitate slow-start of load to avoid hammer effect:
     sleep 5
@@ -723,7 +760,8 @@ for:
 - number of devices (`N_DEVICES`)
 - number of gateways (`N_GATEWAYS`)
 
-When doing so, also increase corresponding values for `FIRST_*`.
+When doing so, also increase corresponding values for `FIRST_*` to be the
+former value of `N_*` to avoid clobbering or creating duplicate devices.
 
 ## Comprehending The Results
 
